deploy/vma-infra/gateway/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: gateway-private
  name: gateway-private
